--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,17 @@
 {
-  "name": "food-truck",
-  "authors": [
-    "atmaram-s"
-  ],
-  "license": "ISC",
-  "homepage": "https://github.com/atmaram-s/food-truck",
-  "private": true,
-  "dependencies": {
-    "angular": "angularjs#^1.6.1",
-    "angular-route": "^1.6.1",
-    "angular-material": "^1.1.3"
-  }
+    "name": "food-truck",
+    "authors": [
+        "atmaram-s"
+    ],
+    "license": "ISC",
+    "homepage": "https://github.com/atmaram-s/food-truck",
+    "private": true,
+    "dependencies": {
+        "angular": "angularjs#^1.6.2",
+        "angular-route": "^1.6.1",
+        "angular-material": "^1.1.3",
+        "ramda": "^0.23.0",
+        "angular-scroll": "^1.0.0",
+        "angular-animate": "^1.6.2"
+    }
 }
