--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "devDependencies": {
         "del": "^2.2.2",
         "gulp": "^3.9.1",
+        "gulp-autoprefixer": "^3.1.1",
         "gulp-changed": "^1.3.2",
         "gulp-clean-css": "^2.3.2",
         "gulp-concat": "^2.6.1",
+        "gulp-htmlmin": "^3.0.0",
         "gulp-inject": "^4.2.0",
         "gulp-sass": "^3.1.0",
         "gulp-strip-debug": "^1.1.0",
+        "gulp-svgmin": "^1.2.3",
         "gulp-sync": "^0.1.4",
         "gulp-uglify": "^2.0.1"
+    },
+    "scripts": {
+        "postinstall": "bower install"
     }
 }
